plugins {
    id 'com.android.library' version '8.4.0'
}

android {
    namespace 'com.oplus.ocs.camera.unit.sdk'
    compileSdk 34

    defaultConfig {
        minSdk 21
    }

    compileOptions {
        // Yahan target badha kar Java 17 kar diya hai
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    sourceSets {
        main {
            java.srcDirs = ['src']
            manifest.srcFile 'AndroidManifest.xml'
        }
    }
}

dependencies {
    // Reference Oplus-specific JARs from the ROM dump
    compileOnly fileTree(dir: '../../../8pro/rmx3081l1/system/system/framework/', include: ['*.jar'], exclude: ['framework.jar', 'ext.jar', 'telephony-common.jar', 'voip-common.jar'])
    implementation 'androidx.annotation:annotation:1.7.1'
    implementation "androidx.camera:camera-camera2:1.3.0"
    implementation "androidx.camera:camera-lifecycle:1.3.0"
    implementation "androidx.camera:camera-view:1.3.0"
    compileOnly 'com.google.android:annotations:4.1.1.4'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports', 'java.base/sun.misc=ALL-UNNAMED',
            '--add-opens', 'java.base/sun.misc=ALL-UNNAMED'
    ]
}